# wss_backtesting

./: pyproject.toml
test/: test_math_helper.py  test_tradebook.py
wss_backtesting/: backtesting.py  equitys.txt  main.py  math_helper.py  stocksymbolAPI.py
wss_backtesting/contabil/: tradebook.py
wss_backtesting/dados/: IBOVDia_30-01-23.csv  ibov.py
wss_backtesting/indicadores/: indicadores_at.py
wss_backtesting/scripts/: IEstrategia.py  boillerbands.py  consecutivas.py
wss_backtesting/visualization/: historical_test.py
