[tool.poetry]
name = "wss-backtesting"
version = "0.1.0"
description = ""
authors = ["thomaznery <thomazmichelini@hotmail.com>"]
readme = "README.md"
packages = [{include = "wss_backtesting"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
