[tool.poetry]
name = "wss-backtesting"
version = "0.1.0"
description = ""
authors = ["thomaznery <thomazmichelini@hotmail.com>"]
readme = "README.md"
packages = [{include = "wss_backtesting"}]

[tool.poetry.dependencies]
python = "^3.10"
yfinance = "^0.2.9"
pandas = "^1.5.3"
abcmeta = "^2.1.1"
stocksymbol = "^0.0.5"


[tool.poetry.group.test.dependencies]
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
